--- a/public/index.html
+++ b/public/index.html
@@ -127,9 +127,15 @@
     Usuario registrado exitosamente
 </div>
 
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script>
+
+<script>
+    const DEVICE_CODE = '02';
+</script>
+
 <script defer src="script.js"></script>
 <script>
     document.getElementById('take-photo-btn').addEventListener('click', async () => {
